...
    <string name="story_points">&#160;points</string>
    <string name="seperator_name_points">-</string>
    <string name="via">via</string>

    <!-- Bookmark cards -->
    <string name="comments_button">COMMENTS</string>
    <string name="remove_button">REMOVE</string>

    <!-- Bookmarks -->
    <string name="no_bookmarks">No bookmarks yet!</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="bookmark_error">There was a problem adding the bookmark</string>

    <!-- Error messages -->
...
